Navbar brand button overflow fix

--- a/www/static/css/layout.css
+++ b/www/static/css/layout.css
@@ -127,7 +127,6 @@ margin: 0 12px 0 12px;
 	padding:0;	
 	margin:0;
 	margin-top:4px;
-	margin-right:5%;
 }
 
 footer {
